--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "type":"module"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build && npx tailwindcss -i ./src/input.css -o ./dist/output.css",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
